# trim-server/docs/swagger.json
@@ -152,6 +152,30 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "operationId": "GetAuthenticated User",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "401": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -169,11 +193,11 @@
         "auth.LoginDto": {
             "type": "object",
             "required": [
-                "Indentifier",
+                "identifier",
                 "password"
             ],
             "properties": {
-                "Indentifier": {
+                "identifier": {
                     "type": "string"
                 },
                 "password": {
@@ -281,6 +305,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Authorization": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
